syntax = "proto3";

package xyz.itshark.play.rpc.grpc.bank;

option java_multiple_files = true;

enum TransactionStatus {
	DUMMYT = 0;
	SUCCESS = 1;
	FAILED = 2;
	CONFIRM_NEEDED = 3;
	CONFIRMED = 4;
}

enum NotificationType {
	DUMMYN = 0;
	TRANSFER_RECIEVED  = 1;
	REQUEST_RECIEVED = 2;
	REQUEST_CONFIRMED = 3;
	REQUEST_REJECTED_NO_FUND = 4;
	REQUEST_REJECTED_USER = 5;
	TRANSFER_COMPLETED = 6;
	TRANSFER_REJECTED_NO_FUND = 7;
	REQUEST_COMPLETED = 8;
}

message TransferMoney {
	int32 trans_id = 1;
	int32 from_account_number = 2;
	int32 to_account_number = 3;
	double ammount = 4;
	string message = 5;
}

message TransferConfirmation {
	int32 trans_id = 1;
	TransactionStatus status = 2;
	string message = 3;
}

message RequestMoney {
	int32 trans_id = 1;
	int32 from_account_number = 2;
	int32 to_account_number = 3;
	double ammount = 4;
	string message = 5;
	bool monthly = 6;
}

message RequestStatus {
	int32 trans_id = 1;
	TransactionStatus status = 2;
	string message = 3;
}

message Account {
	int32 account_number = 1;
}

message AccountNotification {
	int32 account_number = 1;
	double ammount = 2;
	NotificationType ntype = 3;
	double balance = 4;
}

service Bank {
	// user send money to other user
	rpc Transfer(TransferMoney) returns (TransferConfirmation);

	// listen to notification regarding your account
	rpc ListenToNotifications(Account) returns (stream AccountNotification);

	// someone request to get money from your account
	rpc RequestTransfer(stream RequestMoney) returns (stream RequestStatus);

	// you confirm requested transfers
	// TODO
}

